Replace simple JSON with GSON